gestion des metriqus du patient
